--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "multi-docker"
-  env: "Multidocker-env"
+  app: "multi-docker-app"
+  env: "Multidockerapp-env"
   bucket_name: "elasticbeanstalk-us-east-2-741030449866"
-  bucket_path: "docker-multi"
+  bucket_path: "docker-multi-app"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
